Update the design of dashboard and the login page

--- a/src/app/views/dashboard/dashboard.component.html
+++ b/src/app/views/dashboard/dashboard.component.html
@@ -1,3 +1,32 @@
-<p>
-  dashboard works!
-</p>
+<section class="dashboard">
+	<div class="left_container">
+		<ul>
+			<h4>Food and drinks</h4>
+			<li>
+				<span class="icon"></span>
+				<p>Cafe</p>
+			</li>
+			<li>
+				<span class="icon"></span>
+				<p>Bar</p>
+			</li>
+			<li>
+				<span class="icon"></span>
+				<p>Restaurant</p>
+			</li>
+			<li>
+				<span class="icon"></span>
+				<p>kiwi</p>
+			</li>
+		</ul>
+	</div>
+	<div class="center_container">
+		<div class="inner_container">
+			<h1><span class="icon"></span> Cafe</h1>
+			<ul>
+				<li>Grandmas</li>
+				<li>The Grounds of Alexandria</li>
+			</ul>
+		</div>
+	</div>
+</section>
