add article page wip

--- a/src/app/views/article/article.component.html
+++ b/src/app/views/article/article.component.html
@@ -1,3 +1,18 @@
-<p>
-  article works!
-</p>
+<section class="article">
+	<div class="left_container">
+		<ul>
+			<li routerLink="/dashboard">
+				<span class="icon"></span>
+				<p>Back to all article</p>
+			</li>
+			<li>Last Updated Today at 17:45:05</li>
+			<li>Edited by Alexandre Nicol</li>
+		</ul>
+	</div>
+	<div class="center_container">
+		<div class="inner_container">
+			<div class="illustration" style="background-image: url(https://images.unsplash.com/photo-1518265153847-8b59d4540400?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=c52af831d0b1098d53ab3ac68cb784ac&dpr=1&auto=format&fit=crop&w=1000&q=80&cs=tinysrgb)"></div>
+			<h1>Grandmas</h1>
+		</div>
+	</div>
+</section>
