--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -22,7 +22,7 @@
 					</div>
 				</div>
 				<div class="footer">
-					<a class="button" (click)="input_verification()">Login</a>
+					<a class="button" routerLink="/dashboard">Login</a>
 				</div>
 			</div>
 		</div>
