--- a/src/app/views/dashboard/dashboard.component.html
+++ b/src/app/views/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <section class="dashboard">
 	<div class="left_container">
 		<ul>
-			<h4>Food and drinks</h4>
+			<h4>Food and drinks <sup>(234)</sup></h4>
 			<li>
 				<span class="icon"></span>
 				<p>Cafe</p>
@@ -24,8 +24,14 @@
 		<div class="inner_container">
 			<h1><span class="icon"></span> Cafe</h1>
 			<ul>
-				<li>Grandmas</li>
-				<li>The Grounds of Alexandria</li>
+				<li>
+					<span class="icon"></span>
+					<a routerLink="/article">Grandmas</a>
+				</li>
+				<li>
+					<span class="icon"></span>
+					<a  routerLink="/article">The Grounds of Alexandria</a>
+				</li>
 			</ul>
 		</div>
 	</div>
