updating website for 13 inch

--- a/src/app/views/dashboard/dashboard.component.html
+++ b/src/app/views/dashboard/dashboard.component.html
@@ -1,22 +1,72 @@
 <section class="dashboard">
 	<div class="left_container">
 		<ul>
-			<h4>Food and drinks <sup>(234)</sup></h4>
+			<h4>Lifestyle <sup>(234)</sup></h4>
 			<li>
 				<span class="icon"></span>
 				<p>Cafe</p>
 			</li>
 			<li>
 				<span class="icon"></span>
-				<p>Bar</p>
+				<p>Bars</p>
 			</li>
 			<li>
 				<span class="icon"></span>
-				<p>Restaurant</p>
+				<p>Restaurants</p>
+			</li>
+			<li>
+				<span class="icon"></span>
+				<p>Hostels</p>
+			</li>
+			<li>
+				<span class="icon"></span>
+				<p>Markets</p>
+			</li>
+			<h4>Culture <sup>(24)</sup></h4>
+			<li>
+				<span class="icon"></span>
+				<p>Traditions</p>
+			</li>
+			<li>
+				<span class="icon"></span>
+				<p>Events</p>
+			</li>
+			<li>
+				<span class="icon"></span>
+				<p>See-sight</p>
+			</li>
+			<li>
+				<span class="icon"></span>
+				<p>Neigborhoods</p>
+			</li>
+			<li>
+				<span class="icon"></span>
+				<p>Sport</p>
 			</li>
 			<li>
 				<span class="icon"></span>
-				<p>kiwi</p>
+				<p>Wildlife</p>
+			</li>
+			<h4>Administrative <sup>(24)</sup></h4>
+			<li>
+				<span class="icon"></span>
+				<p>Burocracy</p>
+			</li>
+			<li>
+				<span class="icon"></span>
+				<p>Bank</p>
+			</li>
+			<li>
+				<span class="icon"></span>
+				<p>Transports</p>
+			</li>
+			<li>
+				<span class="icon"></span>
+				<p>Medical</p>
+			</li>
+			<li>
+				<span class="icon"></span>
+				<p>Policies</p>
 			</li>
 		</ul>
 	</div>
