--- a/src/app/views/article/article.component.scss
+++ b/src/app/views/article/article.component.scss
@@ -5,13 +5,13 @@
 
 section.article{
 	div.left_container{
-		width: calc(400px - 100px);
+		width: calc(25% - 60px);
 		position: absolute;
 		top: 0;
 		left: 0;
 		bottom: 0;
 		background-color: $light_grey;
-		padding: 50px;
+		padding: 30px;
 
 		ul{
 			margin:0;
@@ -31,7 +31,7 @@ section.article{
 				position: relative;
 				border-radius: 3px;
 				list-style-type: none;
-				padding: 0 10px 0 10px;
+				padding: 10px 10px;
 
 				&:hover{
 					background-color:rgba($dark_primary, .1);
@@ -57,36 +57,82 @@ section.article{
 	div.center_container{
 		position: absolute;
 		top: 0;
-		left: 400px;
+		left: 25%;
 		right: 0;
 		bottom: 0;
+		overflow: auto;
+		padding-bottom: 100px;
+
 
 		div.inner_container{
 			width: calc(100% - 100px);
 			max-width: 800px;
-			margin: 100px auto 0;
+			margin: 50px auto 0;
 
 			div.illustration{
 				width: 100%;
 				height: 300px;
 				margin: 0 0 20px 0;
+				background-color: $light_grey;
 				background-position: center center;
 				background-size: cover;
 				border-radius: 3px;
 			}
-			h1{
+			input.header_1{
 				font-family: 'courier new';
 				font-weight: 800;
+				width: 100%;
+				border: none;
 				margin: 0 0 50px;
 				font-size: 72px;
 				color: $dark_primary;
+			}
+			div.content_block{
+				padding: 15px 0;
 
-				span.icon{
-					font-family: 'font_awesome';
-					font-size: 40px;
+				p{
+					font-size: 16px;
+					font-family: 'courier new';
+					color: $dark_primary;
 				}
 			}
-		}
-		
+			div.add_a_block{
+				overflow: auto;
+				cursor: pointer;
+				opacity: 0;
+				transition: all 200ms;
+				margin-left: -30px;
+
+				&:hover, &.active{
+					opacity: 1;
+				}
+				span.icon{
+					font-family: 'font_awesome';
+					font-size: 20px;
+					display: block;
+					float: left;
+					color: $dark_primary;
+					line-height: 30px;
+					margin-right: 10px;
+				}
+				p{
+					font-family: 'courier new';
+					display: block;
+					float: left;
+					color: $dark_primary;
+					line-height: 30px;
+				}
+			}
+			div.writting_block{
+				textarea{
+					width: 100%;
+					resize: none;
+					font-size: 16px;
+					padding: 15px 0;
+					border: none;
+					font-family: 'courier new';
+				}
+			}
+		}	
 	}
 }
