--- a/src/app/views/dashboard/dashboard.component.scss
+++ b/src/app/views/dashboard/dashboard.component.scss
@@ -5,13 +5,14 @@
 
 section.dashboard{
 	div.left_container{
-		width: calc(400px - 100px);
+		width: calc(25% - 60px);
 		position: absolute;
 		top: 0;
 		left: 0;
 		bottom: 0;
 		background-color: $light_grey;
-		padding: 50px;
+		padding: 30px;
+		overflow: auto;
 
 		ul{
 			margin:0;
@@ -20,8 +21,12 @@ section.dashboard{
 			h4{
 				text-align: left;
 				font-family: 'courier new';
-				padding: 0 0 20px 0;
+				padding: 50px 0 20px 0;
 				color: $dark_primary;
+
+				&:first-child{
+					padding-top: 0;
+				}
 			}
 			li{
 				font-family: 'courier new';
@@ -57,20 +62,20 @@ section.dashboard{
 	div.center_container{
 		position: absolute;
 		top: 0;
-		left: 400px;
+		left: 25%;
 		right: 0;
 		bottom: 0;
 
 		div.inner_container{
 			width: calc(100% - 100px);
 			max-width: 800px;
-			margin: 200px auto 0;
+			margin: 50px auto 0;
 
 			h1{
 				font-family: 'courier new';
 				font-weight: 800;
 				margin: 0 0 50px;
-				font-size: 72px;
+				font-size: 48px;
 				color: $dark_primary;
 
 				span.icon{
