--- a/backend/src/app/views/article/article.component.scss
+++ b/backend/src/app/views/article/article.component.scss
@@ -39,7 +39,7 @@ section.article{
 				span.icon{
 					display: inline;
 					line-height: 30px;
-					margin-left: 0;
+					margin-right: 10px;
 					font-family: 'font_awesome';
 					font-size: 12px;
 					color: $dark_primary;
