--- a/backend/src/app/views/dashboard/dashboard.component.scss
+++ b/backend/src/app/views/dashboard/dashboard.component.scss
@@ -44,7 +44,7 @@ section.dashboard{
 				span.icon{
 					display: inline;
 					line-height: 30px;
-					margin-left: 0;
+					margin-right: 10px;
 					font-family: 'font_awesome';
 					font-size: 12px;
 					color: $dark_primary;
