--- a/backend/src/assets/styles/ui_mixines.scss
+++ b/backend/src/assets/styles/ui_mixines.scss
@@ -40,3 +40,12 @@
 		src: $src;
 	}
 }
+
+// =============================================================================
+// CONTAINTER SIZING
+// =============================================================================
+@mixin container_sizing( $max_size ){
+	width: 90%;
+	max-width: $max_size;
+	margin: 0 auto;
+}
