--- a/backend/src/app/views/login/login.component.html
+++ b/backend/src/app/views/login/login.component.html
@@ -8,21 +8,21 @@
 				<div class="body">
 					<div class="input_group">
 						<label for="email_input">Email address <span class="required">*</span></label>
-						<input type="text" id="email_input" placeholder="annah.weng@gmail.com">
-						<p class="informational_message"></p>
+						<input type="text" id="email_input" [(ngModel)]="user_information.email" placeholder="annah.weng@gmail.com">
+						<p class="informational_message" [innerHTML]="info_email"></p>
 					</div>
 					<div class="input_group">
 						<label for="password_input">Password <span class="required">*</span></label>
-						<input type="password" id="password_input" placeholder="1Grd%jdb">
-						<p class="informational_message"></p>
+						<input type="password" id="password_input" [(ngModel)]="user_information.password" placeholder="1Grd%jdb">
+						<p class="informational_message" [innerHTML]="info_password"></p>
 					</div>
 					<div class="input_group checkbox">
-						<input id="input_stay_loggedin" type="checkbox">
+						<input id="input_stay_loggedin" type="checkbox" [checked]="user_information.stay_loggedin" (change)="user_information.stay_loggedin = !user_information.stay_loggedin">
 						<label for="input_stay_loggedin">Stay logged in.</label>
 					</div>
 				</div>
 				<div class="footer">
-					<a class="button" routerLink="/dashboard">Login</a>
+					<a [className]="button_class" (click)="input_verification()" [innerHTML]="button_text">Login</a>
 				</div>
 			</div>
 		</div>
