--- a/backend/src/app/views/login/login.component.scss
+++ b/backend/src/app/views/login/login.component.scss
@@ -76,7 +76,7 @@ section.login{
 							margin-top: 5px;
 
 							&::ng-deep span{
-								font-family: 'fontawesome';
+								font-family: 'font_awesome';
 								font-weight: 300;
 							}
 						}
@@ -133,8 +133,8 @@ section.login{
 								}
 							}
 							&::ng-deep span.icon{
-								font-family: 'fontawesome';
-								color: $white;
+								font-family: 'font_awesome';
+								color: white;
 								font-size: 20px;
 								display: block;
 								position: absolute;
@@ -152,13 +152,6 @@ section.login{
 						}
 					}
 				}
-			}
-			a.link{
-				font-size: 12px;
-				color: #303030;
-				font-weight: 200;
-				text-align: right;
-				margin: 10px auto;
 			}
 		}
 	}
