Add the base for the article gestion.

--- a/backend/src/app/views/dashboard/dashboard.component.html
+++ b/backend/src/app/views/dashboard/dashboard.component.html
@@ -82,6 +82,10 @@
 					<span class="icon"></span>
 					<a  routerLink="/article">The Grounds of Alexandria</a>
 				</li>
+				<li class="add_article">
+					<span class="icon"></span>
+					<input type="text" placeholder="Create a new article">
+				</li>
 			</ul>
 		</div>
 	</div>
