--- a/backend/src/app/views/dashboard/dashboard.component.scss
+++ b/backend/src/app/views/dashboard/dashboard.component.scss
@@ -16,17 +16,16 @@ section.dashboard{
 
 		ul{
 			margin:0;
-			padding:0;
+			padding:50px 0 0 0;
 
+			&:first-child{
+				padding-top: 0;
+			}
 			h4{
 				text-align: left;
 				font-family: 'courier new';
-				padding: 50px 0 20px 0;
+				padding: 0 0 20px 0;
 				color: $dark_primary;
-
-				&:first-child{
-					padding-top: 0;
-				}
 			}
 			li{
 				font-family: 'courier new';
