--- a/backend/src/app/views/dashboard/dashboard.component.html
+++ b/backend/src/app/views/dashboard/dashboard.component.html
@@ -19,7 +19,7 @@
 				</li>
 				<li class="add_article">
 					<span class="icon"></span>
-					<input [(ngModel)]="new_article_title" (keyup.enter)="create_article()" type="text" placeholder="Create a new article">
+					<input [(ngModel)]="new_article_title" (keyup.enter)="put_article()" type="text" placeholder="Create a new article">
 				</li>
 			</ul>
 		</div>
