--- a/backend/src/app/views/article/article.component.html
+++ b/backend/src/app/views/article/article.component.html
@@ -30,7 +30,11 @@
 	</div>
 	<div class="center_container">
 		<div class="inner_container">
-			<div class="illustration" [style.background]="'url(' + article.content.header + ')'"></div>
+			<div class="illustration" [style.background]="'url(' + article.content.header + ')'">
+				<span class="background_hover">
+					<span class="icon"></span>
+				</span>
+			</div>
 			<input type="text" class="header_1" (blur)="post_article_title()" [(ngModel)]="article.content.title">
 			<ul class="tab">
 				<li (click)="is_preview_display = false" [ngClass]="{'active': !is_preview_display}" >Markdown</li>
