--- a/backend/src/app/views/article/article.component.scss
+++ b/backend/src/app/views/article/article.component.scss
@@ -193,6 +193,36 @@ section.article{
 				background-position: center center;
 				background-size: cover;
 				border-radius: 3px;
+				position: relative;
+
+				&:hover{
+					span.background_hover{
+						opacity: 1;
+					}	
+				}
+				span.background_hover{
+					opacity: 0;
+					position: absolute;
+					top: 0;
+					bottom: 0;
+					left: 0;
+					right: 0;
+					background-color: rgba($dark_primary, .3);
+					display: flex;
+					align-items: center;
+					justify-content: space-around;
+					transition: all 200ms;
+					cursor: pointer;
+
+					span.icon{
+						display: inline;
+						line-height: 30px;
+						margin-right: 10px;
+						font-family: 'font_awesome';
+						font-size: 48px;
+						color: white;
+					}
+				}
 			}
 			input.header_1{
 				font-family: 'courier new';
