--- a/backend/src/app/views/article/article.component.html
+++ b/backend/src/app/views/article/article.component.html
@@ -30,11 +30,15 @@
 	</div>
 	<div class="center_container">
 		<div class="inner_container">
-			<div class="illustration" (click)="upload_background_image()" [style.background]="'url(' + article.content.header + ')'">
-				<span class="background_hover">
-					<span class="icon"></span><input id="photo" type="file" />
-				</span>
-			</div>
+			<label for="header_picture">
+				<div class="illustration" [ngClass]="{'active': illustration.is_file_uploaded}" [style.background]="'url(' + article.content.header + ')'">
+					<span class="background_hover">
+						<span class="icon" [className]="illustration.is_icon_rotating" [innerHtml]="illustration.icon"></span>
+						<span class="gauge" [ngClass]="{'active': illustration.is_file_uploaded}" [ngStyle]="{'width': illustration.gauge_width}"></span>
+					</span>
+				</div>
+			</label>
+			<input id="header_picture" (change)="upload_background_image( $event )" style="display: none;" type="file" />
 			<input type="text" class="header_1" (blur)="post_article_title()" [(ngModel)]="article.content.title">
 			<ul class="tab">
 				<li (click)="is_preview_display = false" [ngClass]="{'active': !is_preview_display}" >Markdown</li>
