--- a/backend/src/app/views/article/article.component.scss
+++ b/backend/src/app/views/article/article.component.scss
@@ -25,7 +25,6 @@ section.modal{
 		top: intial; bottom: intial; left: intial; right: intial;
 		margin-top: 10%;
 		padding-bottom: 30px;
-
 		background-color: #F9FAFC;
 		box-shadow: 0px 0px 10px rgba(black, .3);
 		border-radius: 3px;
@@ -160,6 +159,9 @@ section.article{
 					font-size: 12px;
 					color: $dark_primary;
 
+					&.bold{
+						font-weight: 900;
+					}
 				}
 				p{
 					display: inline;
