--- a/backend/src/styles.scss
+++ b/backend/src/styles.scss
@@ -28,6 +28,7 @@ $light_primary: #D68684;
 // FONT
 // =============================================================================
 @include font-face(font_awesome, '/assets/fonts/font_awesome/fa-light-300', 300, normal, eot woff ttf svg); 
+@include font-face(font_awesome, '/assets/fonts/font_awesome/fa-solid-900', 900, normal, eot woff ttf svg); 
 @include font-face(istok, '/assets/fonts/istok/istok_regular', 400, normal, ttf woff woff2);
 @include font-face(old_standard, '/assets/fonts/old_standard/old_standard_regular', 400, normal, ttf woff woff2);
 @include font-face(old_standard, '/assets/fonts/old_standard/old_standard_bold', 800, normal, ttf woff woff2);
