--- a/backend/src/app/views/dashboard/dashboard.component.scss
+++ b/backend/src/app/views/dashboard/dashboard.component.scss
@@ -80,6 +80,7 @@ section.dashboard{
 				span.icon{
 					font-family: 'font_awesome';
 					font-size: 40px;
+					font-weight: 200;
 				}
 			}
 			ul{
