--- a/backend/src/app/views/login/login.component.html
+++ b/backend/src/app/views/login/login.component.html
@@ -13,7 +13,7 @@
 					</div>
 					<div class="input_group">
 						<label for="password_input">Password <span class="required">*</span></label>
-						<input type="password" id="password_input" [(ngModel)]="user_information.password" placeholder="1Grd%jdb">
+						<input type="password" id="password_input" [(ngModel)]="user_information.password" placeholder="1Grd%jdb" (keyup.enter)="input_verification()">
 						<p class="informational_message" [innerHTML]="info_password | sanitizer"></p>
 					</div>
 					<div class="input_group checkbox">
